Fixes wrong font-family on landing

--- a/ui/src/styles/home/_view-6.scss
+++ b/ui/src/styles/home/_view-6.scss
@@ -166,7 +166,7 @@
 }
 
 #view-6 .info .info__question h5 {
-	font-family: 'Galano Medium', sans-serif;
+	font-family: $font-primary;
 	color: rgba($primary, .9);
 	position: relative;
 	top: -4px;
